# Yu

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
cli/: __init__.py  main.py
data/: scans.db
demo/: docker-compose.yml  start_demo_env.sh
docs/: ARCHITECTURE.md  FAQ.md  GLOSSARY.md  INSTALL.md  INSTALLATION.md  PROJECT_GUIDE.md  README.md  RULES_GUIDE.md  SECURITY_ETHICS.md  USER_MANUAL.md  asset_profile.example.json  code_walkthrough.md  defense_script_10min.md  demo_lab_guide.md  implementation_steps.md  risk_rule_management_guide.md  rules_feed.example.json  test_report.md  thesis_chapter4_draft.md  thesis_chapter5_draft.md  thesis_chapter5_paste_ready.md  thesis_semi_draft.md  thesis_template.md  usage_guide.md
lab/: mock_http_nginx.py  mock_redis.py  mock_ssh.py  run_demo_scan.sh  start_demo_lab.sh  stop_demo_lab.sh
reports/: cli_stress_1.html  concurrent_a.html  demo_lab_manual_check.html  demo_lab_scan_round1.html  demo_lab_scan_round2.html  demo_lab_scan_round3.html  demo_lab_scan_round4.html  demo_lab_scan_round5.html  demo_lab_v2_no_profile.html  demo_lab_v2_with_profile.html  demo_lab_with_profile.html  doc_check.html  fallback_no_nmap_test.html  final_check_scan.html  fp_conf_demo_1.html  open_port_test.html  open_port_test_fixed.html  open_port_test_fixed2.html  qa_cmp_a.html  qa_cmp_b.html  qa_valid.html  qa_web_task.html  real_env_http_service.html  real_env_localhost.html  regression_after_fix.html  role_root_syn.html  round1_formal.html  round1_host_deep.html  round1_hybrid.html  smoke_bugcheck.html  smoke_icmp.html  smoke_icmp_nmap.html  smoke_icmp_only.html  smoke_test.html  smoke_test_2.html  stress_task_1.html  stress_task_5.html  unsafe_path.html  validation_real_a.html  validation_real_b.html  (+5 more)
tests/: __init__.py  test_confidence_tiers.py  test_config_parse_ports.py  test_models.py  test_scoring.py
vuln_assessor/: cli.py  config.py  models.py  (+2 more)
(+105 files in other folders)
